--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,18 @@
   "description": "Erweitert das QIS der Hochschule Trier um eine Sortierung nach Semestern und Berechnungen zur Gesamtnote.",
   "version": "1.0",
   "action": {
-    "default_icon": "default_icon.png"
+    "default_popup": "extension_menu/index.html",
+    "default_icon": "icons/icon-128.png"
   },
+  "icons": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
+  "permissions": [
+    "storage"
+  ],
   "content_scripts": [
     {
       "js": ["scripts/content.js"],
