--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,15 @@
   "manifest_version": 3,
   "name": "HS Trier QIS Helper",
   "description": "Erweitert den QIS Notenspiegel der Hochschule Trier um einige hilfreiche Funktionen.",
-  "version": "1.4",
+  "version": "1.6",
   "action": {
     "default_popup": "extension_menu/index.html",
     "default_icon": "icons/icon-128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "hochschulcrawler@gmail.com"
+    }
   },
   "icons": {
     "16": "icons/icon-16.png",
