--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,15 @@
   "manifest_version": 3,
   "name": "HS Trier QIS Helper",
   "description": "Erweitert den QIS Notenspiegel der Hochschule Trier um einige hilfreiche Funktionen.",
-  "version": "1.6",
+  "version": "1.11",
   "action": {
     "default_popup": "extension_menu/index.html",
     "default_icon": "icons/icon-128.png"
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "hochschulcrawler@gmail.com"
+      "id": "hochschulcrawler@gmail.com",
+      "update_url": "https://mariolampert.de/projekte/HSTrierQISHelper/Firefox/updates.json"
     }
   },
   "icons": {
@@ -25,7 +26,8 @@
     {
       "js": ["scripts/content.js"],
       "matches": [
-        "https://qis.hochschule-trier.de/qisserver/*"
+        "https://qis.hochschule-trier.de/qisserver/*",
+        "file:///C:/Users/Mario/OneDrive/Desktop/webtest.html"
       ]
     }
   ]
