--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,13 @@
   "version": "1.15",
   "action": {
     "default_popup": "extension_menu/index.html",
-    "default_icon": "icons/icon-128.png"
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "32": "icons/icon-32.png",
+      "48": "icons/icon-48.png",
+      "64": "icons/icon-64.png",
+      "128": "icons/icon-128.png"
+    }
   },
   "browser_specific_settings": {
     "gecko": {
@@ -13,20 +19,17 @@
       "update_url": "https://mariolampert.de/projekte/HSTrierQISHelper/Firefox/updates.json"
     }
   },
-  "icons": {
-    "16": "icons/icon-16.png",
-    "32": "icons/icon-32.png",
-    "48": "icons/icon-48.png",
-    "128": "icons/icon-128.png"
-  },
   "permissions": [
     "storage"
+  ],
+  "host_permissions": [
+    "*://qis.hochschule-trier.de/*"
   ],
   "content_scripts": [
     {
       "js": ["scripts/content.js"],
       "matches": [
-        "https://qis.hochschule-trier.de/qisserver/*"
+        "*://qis.hochschule-trier.de/qisserver/*"
       ]
     }
   ]
