Added darkmode function

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "HS Trier QIS Helper",
-  "description": "Erweitert den QIS Notenspiegel der Hochschule Trier um einige hilfreiche Funktionen.",
-  "version": "1.15",
+  "description": "Enhance the QIS grade report of Trier University with some helpful features.",
+  "version": "1.16",
   "action": {
     "default_popup": "extension_menu/index.html",
     "default_icon": {
@@ -19,18 +19,16 @@
       "update_url": "https://mariolampert.de/projekte/HSTrierQISHelper/Firefox/updates.json"
     }
   },
-  "permissions": [
-    "storage"
-  ],
-  "host_permissions": [
-    "*://qis.hochschule-trier.de/*"
-  ],
+  "permissions": [ "storage" ],
+  "host_permissions": [ "*://qis.hochschule-trier.de/*" ],
   "content_scripts": [
     {
-      "js": ["scripts/content.js"],
-      "matches": [
-        "*://qis.hochschule-trier.de/qisserver/*"
-      ]
+      "js": [ "scripts/QIS.js" ],
+      "matches": [ "*://qis.hochschule-trier.de/qisserver/*" ]
+    },
+    {
+      "js": [ "scripts/darkmode.js" ],
+      "matches": [ "*://qis.hochschule-trier.de/qisserver/*" ]
     }
   ]
 }
